--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL=http://localhost:3000
-NEON_ID=psql 'postgresql://neondb_owner:npg_7vaBz3IHNOuw@ep-dawn-water-a12i9fym-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+EXPO_PUBLIC_API_URL=https://agro-app-6hlq.onrender.com
+DATABASE_URL=psql 'postgresql://neondb_owner:npg_7vaBz3IHNOuw@ep-dawn-water-a12i9fym-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
