--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EXPO_PUBLIC_API_URL=https://agro-app-6hlq.onrender.com
-DATABASE_URL=psql 'postgresql://neondb_owner:npg_7vaBz3IHNOuw@ep-dawn-water-a12i9fym-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL='postgresql://neondb_owner:npg_7vaBz3IHNOuw@ep-dawn-water-a12i9fym-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+EXPO_PUBLIC_GEMINI_API_KEY="AIzaSyAGzkF3Tj-V3LooUs4aYB-U3z6IxOjVOtU"
