made some changes to the main dashboard and everything

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "அக்ரிஸ்மார்ட் - விவசாயிகளின் நம்பிக்கை",
+    "name": "Agri iSmart - Faith of the Farmers",
     "slug": "agriismart",
     "version": "1.1.0",
     "orientation": "portrait",
