--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Agri iSmart - Faith of the Farmers",
+    "name": "Agriismart",
     "slug": "agriismart",
     "version": "1.1.0",
     "orientation": "portrait",
