--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-location": "~17.0.1",
     "expo-print": "~15.0.7",
     "expo-router": "~6.0.13",
+    "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
